--- a/Scripture-Slides/Scripture-Slides.ui
+++ b/Scripture-Slides/Scripture-Slides.ui
@@ -230,6 +230,14 @@ QLabel{
        <height>31</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <family>Inter 18pt</family>
+      </font>
+     </property>
+     <property name="currentText">
+      <string>ITC Avant Garde Gothic Pro Book</string>
+     </property>
     </widget>
     <widget class="QPushButton" name="IncreaseFontSize">
      <property name="geometry">
@@ -254,7 +262,7 @@ QLabel{
      </property>
      <property name="iconSize">
       <size>
-       <width>16</width>
+       <width>15</width>
        <height>15</height>
       </size>
      </property>
