--- a/Scripture-Slides/ScriptureSlides.ui
+++ b/Scripture-Slides/ScriptureSlides.ui
@@ -10,6 +10,18 @@
     <height>700</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>1200</width>
+    <height>700</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1200</width>
+    <height>700</height>
+   </size>
+  </property>
   <property name="font">
    <font>
     <family>Inter 18pt</family>
@@ -45,6 +57,10 @@ QLabel{
 QPushButton:hover{
 	background-color: #EFEFEF;
 }
+
+QPushButton:pressed {
+    background-color: #BFBFBF;
+}
 </string>
    </property>
    <widget class="QWidget" name="MainButtons" native="true">
@@ -69,7 +85,7 @@ QPushButton:hover{
     <widget class="QPushButton" name="addSlideBtn">
      <property name="geometry">
       <rect>
-       <x>20</x>
+       <x>30</x>
        <y>20</y>
        <width>41</width>
        <height>41</height>
@@ -103,7 +119,7 @@ QPushButton:hover{
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>70</x>
+       <x>80</x>
        <y>20</y>
        <width>71</width>
        <height>41</height>
@@ -191,9 +207,9 @@ QPushButton:hover{
     <widget class="QPushButton" name="VerseRepeatBtn">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>10</x>
        <y>90</y>
-       <width>161</width>
+       <width>131</width>
        <height>51</height>
       </rect>
      </property>
@@ -216,23 +232,29 @@ QPushButton:hover{
 }
 
 #VerseRepeatBtn:hover {
-    border: 2px solid #3498db;
+    border: 2px solid #c68463;
     color: white;
-    background-color: #3498db; 
+    background-color: #c68463; 
     border-radius: 20px;
 }
-</string>
+
+#VerseRepeatBtn:pressed {
+    border: 2px solid #824d32;
+    color: white;
+    background-color: #824d32; 
+    border-radius: 20px;
+}</string>
      </property>
      <property name="text">
-      <string>Verse Repeat</string>
+      <string>Verse</string>
      </property>
     </widget>
     <widget class="QPushButton" name="HymnRepeatBtn">
      <property name="geometry">
       <rect>
-       <x>210</x>
+       <x>155</x>
        <y>90</y>
-       <width>171</width>
+       <width>131</width>
        <height>51</height>
       </rect>
      </property>
@@ -255,15 +277,67 @@ QPushButton:hover{
 }
 
 #HymnRepeatBtn:hover {
-    border: 2px solid #3498db;
+    border: 2px solid #c68463;
     color: white;
-    background-color: #3498db; 
+    background-color: #c68463; 
+    border-radius: 20px;
+}
+
+#HymnRepeatBtn:pressed {
+    border: 2px solid #824d32;
+    color: white;
+    background-color: #824d32; 
     border-radius: 20px;
 }
 </string>
      </property>
      <property name="text">
-      <string>Hymn Repeat</string>
+      <string>Hymn</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="LBCF">
+     <property name="geometry">
+      <rect>
+       <x>300</x>
+       <y>90</y>
+       <width>131</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Inter 18pt</family>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">#LBCF{
+    border: none;
+    color: white;
+    background-color: #2C2C2C;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+#LBCF:hover {
+    border: 2px solid #c68463;
+    color: white;
+    background-color: #c68463; 
+    border-radius: 20px;
+}
+
+#LBCF:pressed {
+    border: 2px solid #824d32;
+    color: white;
+    background-color: #824d32; 
+    border-radius: 20px;
+}</string>
+     </property>
+     <property name="text">
+      <string>1689</string>
      </property>
     </widget>
    </widget>
@@ -295,6 +369,10 @@ QPushButton{
 QPushButton:hover{
 	Background-color: #FFFFFF;
 }
+
+QPushButton:pressed {
+    background-color: #BFBFBF;
+}
 </string>
     </property>
     <property name="frameShape">
@@ -308,7 +386,7 @@ QPushButton:hover{
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>271</width>
+       <width>261</width>
        <height>31</height>
       </rect>
      </property>
@@ -339,6 +417,11 @@ QComboBox#fontComboBox::drop-down:hover {
 	border-radius: 8px;
 }
 
+QComboBox#fontComboBox::drop-down:pressed {
+   background-color: #BFBFBF;
+
+}
+
 QComboBox#fontComboBox::down-arrow {
     image: url(C:/Users/markt/Scripture-Slides/Scripture-Slides/assets/arrowDown.png); /* Path to your custom arrow image */
     width: 18px; /* Adjust width if needed */
@@ -361,7 +444,7 @@ QComboBox#fontComboBox QAbstractItemView {
     <widget class="QPushButton" name="IncreaseFontSize">
      <property name="geometry">
       <rect>
-       <x>350</x>
+       <x>340</x>
        <y>10</y>
        <width>31</width>
        <height>31</height>
@@ -374,10 +457,7 @@ QComboBox#fontComboBox QAbstractItemView {
       <string notr="true">#IncreaseFontSize{
 	Border: 0px
 }
-
-#IncreaseFontSize:hover{
-	background-color: #FFFFFF;
-}</string>
+</string>
      </property>
      <property name="text">
       <string/>
@@ -396,7 +476,7 @@ QComboBox#fontComboBox QAbstractItemView {
     <widget class="QPushButton" name="DecreaseFontSize">
      <property name="geometry">
       <rect>
-       <x>290</x>
+       <x>280</x>
        <y>10</y>
        <width>31</width>
        <height>31</height>
@@ -408,12 +488,8 @@ QComboBox#fontComboBox QAbstractItemView {
      <property name="styleSheet">
       <string notr="true">#DecreaseFontSize{
 	Border: 0px;
-	background-color: transparent;
 }
-
-#DecreaseFontSize:hover{
-	background-color: #FFFFFF;
-}</string>
+</string>
      </property>
      <property name="text">
       <string/>
@@ -432,7 +508,7 @@ QComboBox#fontComboBox QAbstractItemView {
     <widget class="QPushButton" name="BoldBtn">
      <property name="geometry">
       <rect>
-       <x>410</x>
+       <x>408</x>
        <y>10</y>
        <width>31</width>
        <height>31</height>
@@ -444,12 +520,8 @@ QComboBox#fontComboBox QAbstractItemView {
      <property name="styleSheet">
       <string notr="true">#BoldBtn{
 	Border: 0px;
-	background-color: transparent;
 }
-
-#BoldBtn:hover{
-	background-color: #FFFFFF;
-}</string>
+</string>
      </property>
      <property name="text">
       <string/>
@@ -468,7 +540,7 @@ QComboBox#fontComboBox QAbstractItemView {
     <widget class="QPushButton" name="AlignLeft">
      <property name="geometry">
       <rect>
-       <x>440</x>
+       <x>442</x>
        <y>10</y>
        <width>31</width>
        <height>31</height>
@@ -503,7 +575,7 @@ QComboBox#fontComboBox QAbstractItemView {
     <widget class="QPushButton" name="AlignCenter">
      <property name="geometry">
       <rect>
-       <x>480</x>
+       <x>481</x>
        <y>10</y>
        <width>31</width>
        <height>31</height>
@@ -538,7 +610,7 @@ QComboBox#fontComboBox QAbstractItemView {
     <widget class="QPushButton" name="AlignRight">
      <property name="geometry">
       <rect>
-       <x>520</x>
+       <x>521</x>
        <y>10</y>
        <width>31</width>
        <height>31</height>
@@ -605,10 +677,10 @@ QComboBox#fontComboBox QAbstractItemView {
       </size>
      </property>
     </widget>
-    <widget class="QPushButton" name="BoldBtn_2">
+    <widget class="QPushButton" name="colorWheel">
      <property name="geometry">
       <rect>
-       <x>380</x>
+       <x>376</x>
        <y>10</y>
        <width>31</width>
        <height>31</height>
@@ -644,7 +716,7 @@ QComboBox#fontComboBox QAbstractItemView {
     <widget class="QLineEdit" name="fontBox">
      <property name="geometry">
       <rect>
-       <x>320</x>
+       <x>310</x>
        <y>9</y>
        <width>31</width>
        <height>31</height>
@@ -679,7 +751,7 @@ QComboBox#fontComboBox QAbstractItemView {
      <rect>
       <x>640</x>
       <y>490</y>
-      <width>71</width>
+      <width>61</width>
       <height>41</height>
      </rect>
     </property>
@@ -781,9 +853,16 @@ border-radius: 10px;
 }
 
 #createPresentationBtn:hover {
-    border: 2px solid #3498db;
+    border: 2px solid #c68463;
     color: white;
-    background-color: #3498db; 
+    background-color: #c68463; 
+    border-radius: 20px;
+}
+
+#createPresentationBtn:pressed {
+    border: 2px solid #824d32;
+    color: white;
+    background-color: #824d32; 
     border-radius: 20px;
 }
 </string>
@@ -865,7 +944,7 @@ border-radius: 10px;
      <rect>
       <x>770</x>
       <y>490</y>
-      <width>81</width>
+      <width>71</width>
       <height>41</height>
      </rect>
     </property>
@@ -929,6 +1008,94 @@ border-radius: 10px;
       <normaloff>assets/plus.png</normaloff>assets/plus.png</iconset>
     </property>
    </widget>
+   <widget class="QPushButton" name="AutoBtn">
+    <property name="geometry">
+     <rect>
+      <x>750</x>
+      <y>590</y>
+      <width>131</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Inter 18pt</family>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">#LBCF{
+    border: none;
+    color: white;
+    background-color: #2C2C2C;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+#LBCF:hover {
+    border: 2px solid #3498db;
+    color: white;
+    background-color: #3498db; 
+    border-radius: 20px;
+}
+</string>
+    </property>
+    <property name="text">
+     <string>Auto</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="SlideShowBtn">
+    <property name="geometry">
+     <rect>
+      <x>890</x>
+      <y>590</y>
+      <width>51</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Inter 18pt</family>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">#LBCF{
+    border: none;
+    color: white;
+    background-color: #2C2C2C;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+#LBCF:hover {
+    border: 2px solid #3498db;
+    color: white;
+    background-color: #3498db; 
+    border-radius: 20px;
+}
+</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>assets/SlideShow.png</normaloff>assets/SlideShow.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>35</width>
+      <height>35</height>
+     </size>
+    </property>
+   </widget>
    <zorder>BackgroundFrame_2</zorder>
    <zorder>BackgroundFrame</zorder>
    <zorder>MainButtons</zorder>
@@ -940,6 +1107,9 @@ border-radius: 10px;
    <zorder>label_4</zorder>
    <zorder>label_6</zorder>
    <zorder>addVerseBtn_2</zorder>
+   <zorder>AutoBtn</zorder>
+   <zorder></zorder>
+   <zorder>SlideShowBtn</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -982,7 +1152,14 @@ border-radius: 10px;
     <addaction name="actionInformation"/>
     <addaction name="actionVersion"/>
    </widget>
+   <widget class="QMenu" name="menuEdit">
+    <property name="title">
+     <string>Edit</string>
+    </property>
+    <addaction name="actionUndo"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuEdit"/>
    <addaction name="menuHelp"/>
   </widget>
   <action name="actionPresets">
@@ -1048,6 +1225,11 @@ border-radius: 10px;
     <font>
      <family>Inter 18pt</family>
     </font>
+   </property>
+  </action>
+  <action name="actionUndo">
+   <property name="text">
+    <string>Undo</string>
    </property>
   </action>
  </widget>
